--- a/app/style.scss
+++ b/app/style.scss
@@ -1,46 +1,98 @@
+@mixin button-style {
+    width: 70px;
+    display:inline-block;
+    padding:4px 10px;
+    font-family:"MS Sans Serif";
+    font-size:11px;
+    outline:1px solid #000000;
+    background:#C0C0C0;
+    border:1px solid;
+    border-color:#FFFFFF #808080 #808080 #FFFFFF;
+    cursor: pointer;
+
+    &:active {
+        border-color:#808080 #FFFFFF #FFFFFF #808080 ;
+        }
+}
+
+body,html {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 #app{
+    width: 100%;
+    height: 100vh;
+    position: relative;
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    height: 90vh;
-    padding-top: 40px;
-    position: relative;
+    background-color: #C0C0C0;
 
 }
 
 .image-list{
-    width: 20%;
+    width: 160px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: rgb(80, 141, 141);
+    align-items: center;
+    padding: 5px;
+    background-color: transparent;
+    border: 1px solid;
+    border-color:#FFFFFF #808080 #808080 #FFFFFF;
 }
 
 .image-wrapper{
-    width: 80%;
+    width: calc(100% - 160px) ;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(233, 236, 13);
+    padding: 5px;
+    background:#C0C0C0;
 }
+
 .image{
     width: 100%;
-    background-color: rgb(56, 94, 175);
+    height: 90%;
+    background-color: transparent;
+
+    &__title{
+        text-align: center;
+    }
+
+    img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+    }
 }
+
 .menu{
+    max-width: 320px;
     display: flex;
     justify-content: space-between;
-    background-color: rgb(80, 141, 136);
+    flex-wrap: wrap;
+    background:transparent;
+    margin-bottom: 10px;
 }
 
 
 .button{
-    width: 78px;
-    background-color: #fff;
-    font-size: 14px;
+    @include button-style;
+    margin-top: 5px;
+}
+
+
+input[type=file]::file-selector-button {
+    @include button-style;
+    padding:4px 5px;
 }
 
 .loading{
@@ -52,15 +104,34 @@
         width: 40px;
         height: 40px;
         background: url("./img/loader.svg");
+        opacity: 0;
     }
 }
 
 .row{
-    width: 150px;
+    width: 100%;
     height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid ;
+    border-color:#FFFFFF #808080 #808080 #FFFFFF;
 }
+
 .row img{
+    width: 100%;
+    max-height: 100%;
     object-fit: cover;
+}
+
+@media (max-width: 600px) { 
+    .image-wrapper{
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: 100%;
+    }
+    .image-list{
+        width: 100%;
+    }
 }
